Fix link word wrapping

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -187,11 +187,16 @@ article > figure {
 		text-underline-offset: max(0.1em, 2px);
 		text-decoration-thickness: from-font;
 		text-decoration-color: hsla(0 0% 40% / 0.8);
+		overflow-wrap: break-word
 	}
 
 	a:hover {
 		background: var(--accent);
 		text-decoration-color: hsla(0 0% 0% / 1);
+	}
+
+	ul, ol {
+		padding-left: 1rem;
 	}
 }
 
